--- a/FINAL/travel-booking/src/main/resources/templates/layout/layout_dashboard_user.html
+++ b/FINAL/travel-booking/src/main/resources/templates/layout/layout_dashboard_user.html
@@ -234,6 +234,10 @@
 <script src="/assets/admin/js/dashboard-light.js"></script>
 <script src="/assets/admin/js/datepicker.js"></script>
 
+<script src="/assets/user/js/modify-profile.js"></script>
+
 <th:block th:replace="${jsResources} ?: ~{}"></th:block>
+
+
 </body>
 </html>
