--- a/FINAL/travel-booking/src/main/resources/templates/management/partner/dashboard-partner.html
+++ b/FINAL/travel-booking/src/main/resources/templates/management/partner/dashboard-partner.html
@@ -31,7 +31,7 @@
                                 <div class="col d-flex justify-content-center">
                                     <img id="avatar-hotel" class="rounded-circle" style="width: 150px; height: 150px"
                                          alt="Avatar"
-                                         src="/assets/user/images/default-avatar.png"/>
+                                         src="/assets/user/images/default-hotel.jpg"/>
 
                                 </div>
                                 <div class="row mt-2 mx-0">
@@ -238,7 +238,6 @@
                     });
                 }
             });
-
 
         });
     </script>
