--- a/FINAL/travel-booking/src/main/resources/templates/fragments/avatar_info.html
+++ b/FINAL/travel-booking/src/main/resources/templates/fragments/avatar_info.html
@@ -37,7 +37,7 @@
                     </a>
                 </li>
 
-                <li class="dropdown-item py-1 signout-btn" id="signout-btn">
+                <li class="dropdown-item py-1 signout-btn" id="signout-btn" onclick="logout()">
                     <a class="text-body ms-0">
                         <i class="fas fa-sign-out-alt  mr-2"  style="padding-right: 10px";></i>
                         <span>Log Out</span>
