--- a/FINAL/travel-booking/src/main/resources/templates/layout/layout_dashboard_partner.html
+++ b/FINAL/travel-booking/src/main/resources/templates/layout/layout_dashboard_partner.html
@@ -210,7 +210,12 @@
         </footer>
 
     </div>
+
+
 </div>
+
+<!-- CONFIRM DELETE MODAL -->
+<th:block th:replace="~{fragments/confirm-delete :: confirm-delete-modal}"></th:block>
 
 <!--    Script-->
 <script data-cfasync="false"
