--- a/FINAL/travel-booking/src/main/resources/templates/fragments/confirm-delete.html
+++ b/FINAL/travel-booking/src/main/resources/templates/fragments/confirm-delete.html
@@ -1,5 +1,5 @@
 <!-- Modal -->
-<div th:fragment="confirm-delete-modal" class="modal fade" id="confirmDelete" tabindex="-1"
+<div th:fragment="confirm-delete-modal" class="modal fade" id="confirmDelete" tabindex="-1" aria-labelledby="confirmDelete" aria-hidden="true">
      aria-labelledby="confirmDelete" aria-hidden="true">
     <div class="modal-dialog top-20">
         <div class="modal-content">
