--- a/FINAL/travel-booking/src/main/resources/templates/layout/layout_dashboard_partner.html
+++ b/FINAL/travel-booking/src/main/resources/templates/layout/layout_dashboard_partner.html
@@ -243,6 +243,16 @@
 
 <script src="/assets/user/js/modify-profile.js"></script>
 
+//CHECK PERMISSION
+<script src="/assets/user/js/check-permission.js"></script>
+
+//REFRESH TOKEN
+<script src="/assets/user/js/refresh-token.js"></script>
+
+//LOADING
+<!--Loading-->
+<script src="/assets/user/js/loading.js"></script>
+
 ///TOASTR
 <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js" integrity="sha512-VEd+nq25CkR676O+pLBnDW09R7VQX9Mdiij052gVCp5yVH3jGtH70Ho/UUv4mJDsEdTvqRCFZg0NKGiojGnUCw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
