--- a/FINAL/travel-booking/src/main/resources/static/assets/admin/css/style.css
+++ b/FINAL/travel-booking/src/main/resources/static/assets/admin/css/style.css
@@ -24843,3 +24843,31 @@ div.tox .tox-dialog__body {
     font-size: 12px;
     /* Các thuộc tính CSS khác tùy chỉnh hiển thị */
 }
+
+.form-control:not(.error) {
+    color: black;
+    font-size: 14px;
+    /* Đặt các thuộc tính CSS khác tùy chỉnh cho phần tử input */
+}
+
+/* Lớp overlay để làm mờ nền xung quanh */
+.overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Màu đen với độ trong suốt 0.5 */
+    z-index: 9999; /* Đảm bảo hiển thị trên các element khác */
+}
+
+/* Thẻ div để hiển thị vòng xoay loading trong Bootstrap */
+#loading {
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 10000; /* Đảm bảo hiển thị trên overlay */
+}
