--- a/FINAL/travel-booking/src/main/resources/templates/fragments/avatar_info.html
+++ b/FINAL/travel-booking/src/main/resources/templates/fragments/avatar_info.html
@@ -18,22 +18,10 @@
                 </div>
             </div>
             <ul class="list-unstyled p-1" style="font-size: 13px">
-                <li class="dropdown-item py-1">
-                    <a href="/dashboard_user" class="text-body ms-0">
+                <li class="dropdown-item py-1" >
+                    <a href="#" class="text-body ms-0" id="my-account-btn" >
                         <i class="far fa-user" style="padding-right: 10px";></i>
-                        <span>Profile</span>
-                    </a>
-                </li>
-                <li class="dropdown-item py-1">
-                    <a class="text-body ms-0">
-                        <i class="fas fa-briefcase" style="padding-right: 10px";></i>
-                        <span>Your Booking</span>
-                    </a>
-                </li>
-                <li class="dropdown-item py-1">
-                    <a class="text-body ms-0 ">
-                        <i class="far fa-edit" style="padding-right: 10px";></i>
-                        <span>Edit Profile</span>
+                        <span>My Account</span>
                     </a>
                 </li>
 
@@ -47,3 +35,6 @@
         </div>
     </div>
 </th:block>
+
+
+
