--- a/FINAL/travel-booking/src/main/resources/templates/management/partner/add-room.html
+++ b/FINAL/travel-booking/src/main/resources/templates/management/partner/add-room.html
@@ -63,31 +63,22 @@
                                 <div class="col-lg-4 mb-5">
                                     <label for="roomName" class="form-label">Room Name *</label>
                                     <input type="text" class="form-control" id="roomName" autocomplete="off"
-                                           placeholder name="name">
+                                           placeholder="Enter name" name="name">
                                 </div>
                                 <div class="col-lg-4 mb-5">
-                                    <label for="roomPrice" class="form-label">Price * (VNĐ)</label>
-                                    <div class="input-group">
-                                        <input type="number" class="form-control" id="roomPrice"
-                                               placeholder="Enter price" min="1" autocomplete="off" name="price">
-                                    </div>
+                                    <label for="roomPrice" class="form-label">Room Price *</label>
+                                    <input type="number" class="form-control" id="roomPrice" autocomplete="off"
+                                           placeholder="Enter price" name="price" oninput="validateNumberInput(this)">
                                 </div>
-                                <!--                                <div class="col-lg-4 mb-3">-->
-                                <!--                                    <label class="form-label">Coupon Validity Time</label>-->
-                                <!--                                    <div class="input-group date datepicker" id="datePickerExample">-->
-                                <!--                                        <input type="text" class="form-control">-->
-                                <!--                                        <span class="input-group-text input-group-addon"><i data-feather="calendar"></i></span>-->
-                                <!--                                    </div>-->
-                                <!--                                </div>-->
                                 <div class="col-lg-4 mb-5">
                                     <label for="roomCapacity" class="form-label"> Capacity *</label>
                                     <input type="number" class="form-control" id="roomCapacity" autocomplete="off"
-                                           placeholder name="capacity">
+                                           placeholder="Enter capacity" name="capacity">
                                 </div>
                                 <div class="col-lg-4 mb-5">
                                     <label for="roomQuantity" class="form-label"> Room Quantity *</label>
                                     <input type="number" class="form-control" id="roomQuantity" autocomplete="off"
-                                           placeholder name="quantity">
+                                           placeholder="Enter quantity" name="quantity">
                                 </div>
                                 <div class="col-lg-4 mb-5">
                                     <label for="roomStatusList" class="form-label">Status *</label>
@@ -128,7 +119,7 @@
 
                                 <div class="row bed-row mt-3">
                                     <div class="col-lg-4">
-                                        <select class="form-select bed-type" data-selected-bed-type="">
+                                        <select class="form-control form-select bed-type" name="bedType" data-selected-bed-type="">
                                             <option value="" disabled selected>Chọn loại giường</option>
                                             <option th:each="bedType : ${bedTypes}" th:value="${bedType}"
                                                     th:text="${bedType.getName}"
@@ -157,6 +148,16 @@
                 </div>
             </div>
         </div>
+
+        <!-- Lớp overlay để làm mờ nền xung quanh -->
+        <div class="overlay"></div>
+
+        <!-- Thẻ div để hiển thị vòng xoay loading trong Bootstrap -->
+        <div id="loading">
+            <div class="spinner-border" role="status">
+                <span class="sr-only">Loading...</span>
+            </div>
+        </div>
     </div>
 </main>
 
@@ -170,11 +171,26 @@
 
     <!-- Trong phần thẻ <script> -->
     <script>
+        //Đảm bảo cho facility không chọn trước giá trị mặc định nào
+        document.addEventListener("DOMContentLoaded", function () {
+            const selectElement = document.getElementById("facilityList");
+            selectElement.selectedIndex = -1; // Deselect all options
+        });
+
+        function validateNumberInput(inputElement) {
+            // Kiểm tra giá trị nhập vào của ô input
+            var inputValue = inputElement.value;
+            if (isNaN(inputValue) || inputValue < 0) {
+                // Nếu không phải số hoặc số âm, đặt giá trị của ô input thành rỗng
+                inputElement.value = '';
+            }
+        }
+
         $(document).ready(function () {
             // Áp dụng Select2 cho phần tử <select>
             $("#facilityList").select2({
                 multiple: true, // Cho phép chọn nhiều giá trị
-                placeholder: "Select BedType", // Văn bản hiển thị khi chưa chọn giá trị nào
+                placeholder: "Select Facility", // Văn bản hiển thị khi chưa chọn giá trị nào
                 width: "100%", // Chiều rộng của dropdown
                 height: "100%",
                 allowClear: true // Hiển thị nút xóa khi đã chọn giá trị
@@ -185,10 +201,12 @@
                 // Sao chép dòng giường đầu tiên và thêm vào dưới cùng
                 const newBedRow = $(".bed-row:first").clone().get(0); // Hoặc có thể dùng .first()
 
+                // Thiết lập số lượng về 1 trong dòng mới sao chép
+                const quantityInput = newBedRow.querySelector(".bed-quantity");
+                quantityInput.value = 1;
+
                 $(".container").append(newBedRow);
             });
-
-
         });
 
         document.addEventListener("DOMContentLoaded", function () {
@@ -203,6 +221,14 @@
             // Lắng nghe sự kiện click trên nút xóa
             document.addEventListener("click", function (event) {
                 if (event.target.classList.contains("btn-remove-bed")) {
+
+                    // Kiểm tra xem có còn ít nhất hai giường hay không
+                    const bedRows = document.querySelectorAll(".bed-row");
+                    if (bedRows.length <= 1) {
+                        // Nếu chỉ còn một giường, không thực hiện xóa
+                        return;
+                    }
+
                     // Xóa dòng chứa giường khi người dùng nhấn nút xóa
                     event.target.closest(".bed-row").remove();
                 }
@@ -244,6 +270,9 @@
                         required: true,
                         digits: true,
                         min: 1
+                    },
+                    bedType: {
+                        required: true
                     }
                 },
                 messages: {
@@ -275,6 +304,9 @@
                         required: "Please enter the number of beds.",
                         digits: "Please enter a valid whole number.",
                         min: "Number of beds must be at least 1."
+                    },
+                    bedType:{
+                        required: "Please choose bedType"
                     }
                 },
                 errorClass: "custom-error-message"
@@ -284,51 +316,11 @@
             document.getElementById("create-room-btn").addEventListener("click", function () {
 
                 if ($("#uploadForm").valid()) {
-                    // Tạo formData mới
-                    const formData = new FormData();
+                    showLoading();
 
-                    let userInfo = JSON.parse(localStorage.getItem("userInfo"))
+                    checkDuplicateBed();
 
-
-                    // Thu thập thông tin từ các trường form và thêm vào formData
-                    formData.append("name", document.getElementById("roomName").value);
-                    formData.append("description", document.getElementById("roomDescription").value);
-                    formData.append("price", document.getElementById("roomPrice").value);
-                    formData.append("capacity", document.getElementById("roomCapacity").value);
-                    formData.append("room_nums", document.getElementById("roomQuantity").value);
-                    formData.append("roomStatus", document.getElementById("roomStatusList").value);
-                    formData.append("hotelEmail", userInfo.username);
-
-                    // Xử lý phần file ảnh từ trường "roomImages"
-                    const roomImagesInput = document.getElementById("roomImages");
-                    const images = roomImagesInput.files;
-                    for (let i = 0; i < images.length; i++) {
-                        formData.append("images", images[i]);
-                    }
-
-                    // Lấy danh sách các facility đã chọn từ Select2 và chuyển thành mảng []
-                    const selectedFacilities = $("#facilityList").val();
-                    formData.append("facilities", selectedFacilities);
-
-                    // Thu thập thông tin về giường từ các dòng giường
-                    const bedRows = document.querySelectorAll(".bed-row");
-                    const beds = [];
-
-                    bedRows.forEach(function (bedRow) {
-                        const bedType = bedRow.querySelector(".bed-type").value;
-                        const bedQuantity = bedRow.querySelector(".bed-quantity").value;
-
-                        // Tạo đối tượng CreateBedRequest từ giá trị của trường beds
-                        const bedRequest = {bedType: bedType, quantity: bedQuantity};
-
-                        beds.push(bedRequest);
-                    });
-
-                    // Thêm mảng beds vào formData
-                    beds.forEach(function (bed, index) {
-                        formData.append(`beds[${index}].bedType`, bed.bedType);
-                        formData.append(`beds[${index}].quantity`, bed.quantity);
-                    });
+                    createFormData();
 
                     $.ajax({
                         url: '/api/v1/partner/rooms',
@@ -347,6 +339,9 @@
                             // Xử lý lỗi (nếu có)
                             console.error(error);
                             toastr.error('Đã xảy ra lỗi khi tạo phòng.');
+                        },
+                        complete: function () {
+                            hideLoading();
                         }
                     });
                     // Console log dữ liệu formData dưới dạng JSON
@@ -356,6 +351,7 @@
             });
         });
 
+        //Chuyển formData về Json để check trong console
         function formDataToJSON(formData) {
             const obj = {};
             formData.forEach((value, key) => {
@@ -371,6 +367,75 @@
             return obj;
         }
 
+        function checkDuplicateBed() {
+            const selectedBedTypes = [];
+            const selectBoxes = document.querySelectorAll(".bed-type");
+            selectBoxes.forEach(function (selectBox) {
+                const selectedValue = selectBox.value;
+                if (selectedValue) {
+                    selectedBedTypes.push(selectedValue);
+                }
+            });
+
+            // Kiểm tra xem có hai bedType giống nhau hay không
+            const hasDuplicateBedType = selectedBedTypes.some(function (value, index) {
+                return selectedBedTypes.indexOf(value) !== index;
+            });
+
+            if (hasDuplicateBedType) {
+                // Nếu có bedType trùng lặp, hiển thị thông báo lỗi và ngăn người dùng submit form
+                event.preventDefault();
+                toastr.error("Vui lòng chọn mỗi loại giường chỉ một lần.");
+                return;
+            }
+        }
+
+        function createFormData() {
+            // Tạo formData mới
+            const formData = new FormData();
+
+            let userInfo = JSON.parse(localStorage.getItem("userInfo"))
+
+            // Thu thập thông tin từ các trường form và thêm vào formData
+            formData.append("name", document.getElementById("roomName").value);
+            formData.append("description", document.getElementById("roomDescription").value);
+            formData.append("price", document.getElementById("roomPrice").value);
+            formData.append("capacity", document.getElementById("roomCapacity").value);
+            formData.append("room_nums", document.getElementById("roomQuantity").value);
+            formData.append("roomStatus", document.getElementById("roomStatusList").value);
+            formData.append("hotelEmail", userInfo.username);
+
+            // Xử lý phần file ảnh từ trường "roomImages"
+            const roomImagesInput = document.getElementById("roomImages");
+            const images = roomImagesInput.files;
+            for (let i = 0; i < images.length; i++) {
+                formData.append("images", images[i]);
+            }
+
+            // Lấy danh sách các facility đã chọn từ Select2 và chuyển thành mảng []
+            const selectedFacilities = $("#facilityList").val();
+            formData.append("facilities", selectedFacilities);
+
+            // Thu thập thông tin về giường từ các dòng giường
+            const bedRows = document.querySelectorAll(".bed-row");
+            const beds = [];
+
+            bedRows.forEach(function (bedRow) {
+                const bedType = bedRow.querySelector(".bed-type").value;
+                const bedQuantity = bedRow.querySelector(".bed-quantity").value;
+
+                // Tạo đối tượng CreateBedRequest từ giá trị của trường beds
+                const bedRequest = {bedType: bedType, quantity: bedQuantity};
+
+                beds.push(bedRequest);
+            });
+
+            // Thêm mảng beds vào formData
+            beds.forEach(function (bed, index) {
+                formData.append(`beds[${index}].bedType`, bed.bedType);
+                formData.append(`beds[${index}].quantity`, bed.quantity);
+            });
+        }
 
     </script>
     <!--    Tạo phòng-->
