--- a/FINAL/travel-booking/src/main/resources/templates/management/partner/room-management.html
+++ b/FINAL/travel-booking/src/main/resources/templates/management/partner/room-management.html
@@ -30,32 +30,30 @@
                 room</a>
         </nav>
         <div class="search-box p-4 bg-white rounded mb-3 box-shadow">
+            <div class="col-lg-3 pb-4">
+                <h5>Room Management Lists</h5>
+            </div>
             <form class="forms-sample">
                 <div class="row align-items-center">
-                    <div class="col-lg-3">
-                        <h5>Room Management Lists</h5>
-                    </div>
+
                     <div class="col-lg-4 col-md-4">
-                        <input type="text" placeholder="Search by category title" class="form-control">
+                        <input type="text" placeholder="Search by room name" class="form-control" id="searchName">
                     </div>
                     <div class="col-lg-3 col-md-4">
-                        <select class="form-select form-select-lg">
-                            <option selected>Category</option>
-                            <option value="1">One</option>
-                            <option value="2">Two</option>
-                            <option value="3">Three</option>
-                        </select>
-                    </div>
-                    <div class="col-lg-2 col-md-4">
-                        <select class="form-select form-select-lg">
-                            <option selected>Show Entries</option>
-                            <option value="1">10</option>
-                            <option value="2">20</option>
-                            <option value="3">30</option>
+                        <select class="form-select" id="searchRoomStatus">
+                            <option th:each="status : ${roomStatusList}" th:value="${status}"
+                                    th:text="${status.getName}"
+                                    class="text-body"></option>
                         </select>
                     </div>
                 </div>
             </form>
+            <div class="mt-3">
+                <button type="submit" class="btn btn-primary px-3 py-2" id="search-room-btn" ><i class="link-icon"
+                                                                                      data-feather="search"></i>
+                    Search
+                </button>
+            </div>
         </div>
         <div class="row">
             <div class="col-md-12 grid-margin stretch-card">
@@ -105,8 +103,7 @@
                                     <td class="text-center">
                                         <ul class="d-flex list-unstyled mb-0 justify-content-center">
                                             <li class="me-2">
-                                                <a th:href="@{'/edit-room/' + ${room.id}}"
-                                                   target="_blank">
+                                                <a href="#" data-bs-toggle="modal" data-bs-target="#viewRoom">
                                                     <i class="link-icon" data-feather="eye"></i>
                                                 </a>
                                             </li>
@@ -149,6 +146,8 @@
         </div>
     </div>
 
+    <!-- view MODAL -->
+    <div th:replace="~{fragments/view_room:: view-room-modal}"></div>
 </main>
 
 <th:block id="js-resources">
@@ -179,8 +178,30 @@
                     }
                 });
             });
-        });
 
+            $('#search-room-btn').on("click", function (event) {
+                event.preventDefault();
+                const name = document.getElementById("searchName").value;
+                const formData ={
+                    name: name
+                }
+                console.log(formData);
+                $.ajax({
+                    url: '/api/v1/partner/rooms/search',
+                    type: 'GET',
+                    data: formData,
+                    success: function (roomList) {
+                        // Xử lý kết quả trả về từ API nếu cần
+                        console.log(roomList);
+                    },
+                    error: function (xhr, status, error) {
+                        // Xử lý lỗi (nếu có)
+                        console.error(error);
+                        toastr.error('Đã xảy ra lỗi khi search.');
+                    }
+                });
+            });
+        });
     </script>
 </th:block>
 </body>
